<resources>
    <string name="app_name">EasyCalc</string>
    <string name="result">Result</string>
    <string name="division">\u00F7</string>
    <string name="multiplication">\u00D7</string>
    <string name="sub_struct">_</string>
    <string name="adding">+</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="enter_your_numbers">Enter your numbers</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="sqrt">√</string>
    <string name="exp">e\u02e3</string>
    <string name="pow2">x\u00B2</string>
    <string name="pow3">x\u00B3</string>
    <string name="pow">x^y</string>
    <string name="fact">n!</string>
    <string name="pi">\u03C0</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="signe">-</string>
    <string name="two">2</string>
    <string name="eq">=</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="parleft">(</string>
    <string name="parright">)</string>
    <string name="bs">⌫</string>
</resources>