<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bkg"
    tools:ignore="HardcodedText"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="20dp">

        <TextView
            android:id="@+id/workings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/results"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        style="@style/layoutStyle">
        <Button
            android:id="@+id/btn_sin"
            style="@style/buttonOperator"
            android:onClick="sinAction"
            android:text="@string/sin" />

        <Button
            android:id="@+id/btn_cos"
            style="@style/buttonOperator"
            android:onClick="cosAction"
            android:text="@string/cos" />

        <Button
            android:id="@+id/btn_tan"
            style="@style/buttonOperator"
            android:onClick="tanAction"
            android:text="@string/tan" />

        <Button
            android:id="@+id/btn_bs"
            style="@style/buttonOperator"
            android:text="@string/bs"
            android:onClick="backSpaceAction"/>


    </LinearLayout>

    <LinearLayout style="@style/layoutStyle">

        <Button
            android:id="@+id/btn_sqrt"
            style="@style/buttonOperator"
            android:onClick="sqrtAction"
            android:text="@string/sqrt" />

        <Button
            android:id="@+id/btn_pow2"
            style="@style/buttonOperator"
            android:onClick="pow2Action"
            android:text="@string/pow2" />

        <Button
            android:id="@+id/btn_pow3"
            style="@style/buttonOperator"
            android:onClick="pow3Action"
            android:text="@string/pow3" />

        <Button
            android:id="@+id/btn_pow"
            style="@style/buttonOperator"
            android:onClick="powAction"
            android:text="@string/pow" />


    </LinearLayout>

    <LinearLayout
        style="@style/layoutStyle">

        <Button
            android:id="@+id/btn_fact"
            style="@style/buttonOperator"
            android:text="@string/fact" />

        <Button
            android:id="@+id/btn_exp"
            style="@style/buttonOperator"
            android:text="@string/exp" />

        <Button
            android:id="@+id/btn_pi"
            style="@style/buttonOperator"
            android:onClick="piAction"
            android:text="@string/pi" />
        <Button
            android:id="@+id/btn_log"
            style="@style/buttonOperator"
            android:text="@string/log" />


    </LinearLayout>
    <LinearLayout
        style="@style/layoutStyle">
        <Button
            style="@style/buttonNumber"
            android:id="@+id/btn_seven"
            android:onClick="numberAction"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/btn_eight"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/eight"/>
        <Button
            android:id="@+id/btn_nine"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/nine"/>
        <Button
            android:id="@+id/btn_parleft"
            style="@style/sideTool"
            android:onClick="parOpenAction"
            android:text="@string/parleft" />
        <Button
            android:id="@+id/btn_parright"
            style="@style/sideTool"
            android:onClick="parCloseAction"
            android:text="@string/parright" />
    </LinearLayout>
    <LinearLayout
        style="@style/layoutStyle">
        <Button
            android:id="@+id/btn_four"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/four" />
        <Button
            android:id="@+id/btn_five"
            android:onClick="numberAction"
            style="@style/buttonNumber"
            android:text="@string/five" />
        <Button
            android:id="@+id/btn_six"
            android:onClick="numberAction"
            style="@style/buttonNumber"
            android:text="@string/six" />
        <Button
            android:id="@+id/btn_multiplication"
            style="@style/sideTool"
            android:onClick="clickedOperation"
            android:text="@string/multiplication" />
        <Button
            android:id="@+id/btn_division"
            style="@style/sideTool"
            android:onClick="clickedOperation"
            android:text="@string/division" />
    </LinearLayout>
    <LinearLayout
        style="@style/layoutStyle">
        <Button
            android:id="@+id/btn_one"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/one" />
        <Button
            android:id="@+id/btn_two"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/two" />
        <Button
            android:id="@+id/btn_three"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/three" />
        <Button
            android:id="@+id/btn_add"
            style="@style/sideTool"
            android:text="@string/adding"
            android:onClick="clickedOperation"/>
        <Button
            android:id="@+id/btn_substruction"
            style="@style/sideTool"
            android:onClick="clickedOperation"
            android:text="@string/sub_struct" />


    </LinearLayout>

    <LinearLayout
        style="@style/layoutStyle">

        <Button
            android:id="@+id/btn_zero"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/zero" />
        <Button
            android:id="@+id/btn_dot"
            style="@style/buttonNumber"
            android:onClick="numberAction"
            android:text="@string/dot" />

        <Button
            android:id="@+id/btn_signe"
            style="@style/buttonNumber"
            android:text="@string/signe" />
            <!--android:onClick= TODO -->


        <Button
            android:id="@+id/btn_eq"
            android:layout_width="150dp"
            android:layout_height="70dp"
            style="@style/sideTool"
            android:text="@string/eq"
            android:textSize="24sp"
            android:onClick="equalsButton"/>
    </LinearLayout>




</LinearLayout>






